--- a/trunk/Tutorial-gae-dm/.settings/com.google.gwt.eclipse.core.prefs
+++ b/trunk/Tutorial-gae-dm/.settings/com.google.gwt.eclipse.core.prefs
@@ -1,3 +1,4 @@
-#Fri Nov 04 15:15:15 CET 2011
+#Fri Nov 04 16:17:41 CET 2011
 eclipse.preferences.version=1
+entryPointModules=
 filesCopiedToWebInfLib=gwt-servlet.jar
