--- a/Tutorial-gae-dm/war/WEB-INF/web.xml
+++ b/Tutorial-gae-dm/war/WEB-INF/web.xml
@@ -15,6 +15,11 @@
     <servlet-name>greetServlet</servlet-name>
     <url-pattern>/tutorial_gae_dm/greet</url-pattern>
   </servlet-mapping>
+      
+  <servlet-mapping>
+    <servlet-name>greetServlet</servlet-name>
+    <url-pattern>/sendGuestbook</url-pattern>
+  </servlet-mapping>
   
   <!-- Default page to serve -->
   <welcome-file-list>
