Parte relativa al tutorial di weka

--- a/Tutorial-gae-dm/war/WEB-INF/web.xml
+++ b/Tutorial-gae-dm/war/WEB-INF/web.xml
@@ -16,12 +16,21 @@
     <servlet-class>it.unibo.server.GuestbookServlet</servlet-class>
   </servlet> 
   
+  <servlet>
+    <servlet-name>fileUpload</servlet-name>
+    <servlet-class>it.unibo.server.FileUpload</servlet-class>
+  </servlet> 
+    
   <servlet-mapping>
     <servlet-name>greetServlet</servlet-name>
     <url-pattern>/tutorial_gae_dm/greet</url-pattern>
   </servlet-mapping>
-  GuestbookServlet
       
+  <servlet-mapping>
+    <servlet-name>fileUpload</servlet-name>
+    <url-pattern>/fileUpload</url-pattern>
+  </servlet-mapping>
+          
   <servlet-mapping>
     <servlet-name>sendGuestbook</servlet-name>
     <url-pattern>/sendGuestbook</url-pattern>
