--- a/Tutorial-gae-dm/.settings/com.google.gdt.eclipse.core.prefs
+++ b/Tutorial-gae-dm/.settings/com.google.gdt.eclipse.core.prefs
@@ -1,4 +1,5 @@
-#Fri Nov 04 15:15:15 CET 2011
+#Tue Nov 08 09:50:21 CET 2011
 eclipse.preferences.version=1
+jarsExcludedFromWebInfLib=C\:/Users/Fabio/workspace/Tutorial-gae-dm/lib/weka.jar
 warSrcDir=war
 warSrcDirIsOutput=true
