--- a/trunk/Tutorial-gae-dm/.classpath
+++ b/trunk/Tutorial-gae-dm/.classpath
@@ -5,7 +5,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="com.google.gwt.eclipse.core.GWT_CONTAINER/GWT (1)"/>
 	<classpathentry kind="con" path="com.google.appengine.eclipse.core.GAE_CONTAINER"/>
-	<classpathentry kind="lib" path="lib/weka.jar"/>
 	<classpathentry kind="lib" path="lib/commons-fileupload-1.2.2.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/google-api-services-prediction-v1.4-1.3.0-beta.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/google-http-client-1.6.0-beta.jar"/>
@@ -13,5 +12,6 @@
 	<classpathentry kind="lib" path="war/WEB-INF/lib/google-oauth-client-1.6.0-beta.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/google-api-client-extensions-1.6.0-beta.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/google-http-client-extensions-1.6.0-beta.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/weka.jar"/>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
